--- a/index.html
+++ b/index.html
@@ -1,37 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es" id="top">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fan Page Drive to Survive</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fan Page • Drive to Survive</title>
+  <meta name="description" content="Fan page educativa sobre la serie Drive to Survive.">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <header>
-    <h1>Mi serie favorita</h1>
-    <p>Drive to Survive</p>
-       <nav>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="Capitulos.html">Capitulos</a></li>
-            <li><a href="Personajes.html">Personajes</a></li>
-        </ul>
+  
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="brand">
+      <span class="logo">DTS</span>
+      <span>Drive to Survive • Fan</span>
+    </div>
+    <nav class="nav" aria-label="Principal">
+      <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a class="" href="capitulos.html">Capítulos</a></li>
+        <li><a class="" href="personajes.html">Personajes</a></li>
+      </ul>
     </nav>
-   </header> 
-   <nav>
+  </div>
+</header>
 
-   </nav>
-   <main>
-    <img src="Img/Foto chat.png" alt="Foto personal">
-    <p>Mi serie favorita es <strong>Drive to Survive</strong>, una serie que me apasiona por su enfoque en la Fórmula 1 y los dramas detrás de las carreras.</p>
-    <section>
-        <h2>Drive to Survive</h2>
-        <p>Drive to Survive es una serie documental de Netflix que sigue la temporada de Fórmula 1, ofreciendo una mirada detrás de las cámaras de las carreras y los equipos.</p>
+  <main>
+    <section class="section hero">
+      <div class="container">
+        <div class="hero">
+          <div class="copy">
+            <h1>Mi serie favorita: <em>Drive to Survive</em></h1>
+            <p class="meta">Docuserie de Fórmula 1: drama, estrategia y velocidad.</p>
+            <p>Este sitio resume capítulos y personajes destacados. Navegá con el menú o empezá por los <strong>Capítulos</strong>.</p>
+            <a class="btn primary" href="capitulos.html">Ver capítulos</a>
+            <a class="btn" href="personajes.html">Ver personajes</a>
+          </div>
+          <div class="card">
+            <span class="badge">Portada</span>
+            <img src="img/temporada-1.jpg" alt="Imagen de portada de Drive to Survive">
+          </div>
+        </div>
+      </div>
     </section>
-<a href="https://en.wikipedia.org/wiki/Formula_1:_Drive_to_Survive" target="_blank" >Sitio web drive to survive</a>
-   </main>
-   <footer>
-    <p>Derechos reservados
-    </p>
-   </footer>
+
+    <section class="section alt">
+      <div class="container grid">
+        <article class="card">
+          <h2>¿Qué es Drive to Survive?</h2>
+          <p><em>Drive to Survive</em> es una serie documental de Netflix que sigue la temporada de F1 con acceso detrás de escena a pilotos y equipos.</p>
+          <p><a class="btn" href="https://en.wikipedia.org/wiki/Formula_1:_Drive_to_Survive" target="_blank" rel="noopener noreferrer">Más info</a></p>
+        </article>
+        <article class="card">
+          <h2>Lo que vas a encontrar</h2>
+          <ul>
+            <li>Trailer desde YouTube.</li>
+            <li>Listado de temporadas y episodios destacados.</li>
+            <li>Galería de personajes principales.</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+  </main>
+  
+<footer class="site-footer">
+  <div class="container"><p>Sitio fan no oficial — Proyecto educativo Autor: Nacho 2025</p></div>
+</footer>
+<a class="top-btn" href="#top" aria-label="Volver arriba">↑</a>
+
 </body>
 </html>
