--- a/capitulos.html
+++ b/capitulos.html
@@ -32,7 +32,7 @@
         <div class="video">
           <iframe title="Trailer de Drive to Survive" src="https://www.youtube.com/embed/GF1WSqVJySE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-        <p>En este video se muestra un resumen de la serie <em>Drive to Survive</em>.</p>
+        <p>En este video se muestra un trailer de la serie <em>Drive to Survive</em>.</p>
       </div>
     </section>
 
