--- a/personajes.html
+++ b/personajes.html
@@ -28,7 +28,7 @@
     <section class="section">
       <div class="container">
         <h1>Personajes principales</h1>
-        <p class="meta">Galería imágenes.</p>
+        <p class="meta">Galería de imágenes.</p>
       </div>
     </section>
 
